@@ -9,9 +9,9 @@ mysqlclient >= 1.3.12
 pymongo >= 3.7.0
 mmcif >= 0.54
 rcsb.utils.config >= 0.35
-rcsb.utils.io >= 0.63
-rcsb.utils.multiproc >= 0.16
-rcsb.utils.chemref >= 0.38
+rcsb.utils.io >= 0.65
+rcsb.utils.multiproc >= 0.17
+rcsb.utils.chemref >= 0.45
 rcsb.utils.citation >= 0.15
 rcsb.utils.validation >= 0.20
 scandir; python_version < "3.0"
