@@ -66,11 +66,11 @@ setup(
         "mmcif >= 0.54",
         'scandir; python_version < "3.0"',
         # 'configparser; python_version < "3.0"',
-        "rcsb.utils.io >= 0.63",
+        "rcsb.utils.io >= 0.65",
         "rcsb.utils.config >= 0.35",
-        "rcsb.utils.multiproc >= 0.16",
+        "rcsb.utils.multiproc >= 0.17",
         "rcsb.utils.validation >= 0.21",
-        "rcsb.utils.chemref >= 0.42",
+        "rcsb.utils.chemref >= 0.45",
         "rcsb.utils.citation >= 0.15",
         "rcsb.utils.ec >= 0.21",
         "rcsb.utils.taxonomy >= 0.28",
